2005-05-06  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::save_ascii,
	octave_struct::save_binary, octave_sruct::save_hdf5):
	Always save cell array.

	* DLD-FUNCTIONS/__qp__.cc (qp): Use chol2inv to compute inverse
	from Cholesky factors.
	(cholinv): Delete.

	* DLD-FUNCTIONS/chol.cc (Fcholinv): New function.
	(Fchol2inv): New function.

2005-05-05  Keith Goodman  <kwgoodman@gmail.com>

	* ov-usr-fcn.cc	(Fnargout, Fnargin): Update doc strings.
	* help.cc (keywords): Update doc strings for varargin, varargout.

2005-05-05  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (BEGIN_S_CONVERSION): Correctly handle width
	specifiers.

2005-05-04  John W. Eaton  <jwe@octave.org>

	* ls-mat5.cc (read_mat5_binary_element): Implement reading of N-d
	structure arrays.

	* ov-struct.cc (octave_struct::load_hdf5,
	octave_struct::load_binary, octave_struct::load_ascii): Assign
	cell_value to map slot, not octave_value containing the cell.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* error.cc (Flasterr): Don't access argv if an error occurs when
	creating it.

	* mkgendoc (main): Print header message.

2005-05-02  Bill Denney  <denney@seas.upenn.edu>

	* data.cc, defaults.cc, DLD-FUNCTIONS/qz.cc, file-io.cc,
	sighandlers.cc, syscalls.cc: Docstring fixes.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (octave_print_internal (std::ostream&,
	const Range&, bool, int)): Don't print newline at end of broken
	rows (that is handled by pr_col_num_header).
	From Keith Goodman <kwgoodman@gmail.com>.

	* Makefile.in (octave$(EXEEXT)): List $(UMFPACK_LIBS) ahead of
	$(BLAS_LIBS).
	(OCTAVE_LIBS): Include $(GLPK_LIBS) in the list if dynamic linking
	is not enabled.
	From Dmitri A. Sergatskov <dasergatskov@gmail.com>.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* oct-map.h, oct-map.cc (Octave_map::seek, Octave_map::contents):
	New non-const versions.
	(Octave_map::assign (const octave_value_list&,